<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/appText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/AppStartText"
        android:layout_marginBottom="@dimen/app_text_margin_bottom"/>

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:hint="@string/hint_login"
        android:theme="@style/AppEditText"
        android:textColor="@color/colorWhite"
        android:drawableLeft="@drawable/ic_person_outline_white_24dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:theme="@style/AppEditText"
        android:textColor="@color/colorWhite"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"/>

    <Button
        android:id="@+id/btnForgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onForgottenPassClick"
        android:text="@string/button_forgotten"
        android:layout_gravity="end"
        style="@style/AppMainButton"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSendClick"
        android:text="@string/button_send"
        style="@style/AppButtonSend"
        android:layout_marginTop="@dimen/button_sent_margin_top"
        android:layout_marginBottom="@dimen/button_sent_margin_bottom"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_facebook"
            android:onClick="onFacebookClick"
            android:drawableTop="@drawable/selector_login_facebook"
            style="@style/AppMainButton"
            android:textSize="@dimen/login_button_text_size"/>

        <View style="@style/AppButtonDivider" />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_google"
            android:onClick="onGoogleClick"
            android:drawableTop="@drawable/selector_login_google"
            style="@style/AppMainButton"
            android:textSize="@dimen/login_button_text_size"/>

        <View style="@style/AppButtonDivider"/>

        <Button
            android:id="@+id/btnTwitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_twitter"
            android:onClick="onTwitterClick"
            android:drawableTop="@drawable/selector_login_twitter"
            style="@style/AppMainButton"
            android:textSize="@dimen/login_button_text_size"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRegistrationClick"
        android:text="@string/button_reg"
        style="@style/AppMainButton"
        android:layout_marginTop="@dimen/button_sent_margin_bottom"/>

</LinearLayout>