<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/appText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/AppStartText"/>

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:hint="@string/hint_login"
        android:theme="@style/AppEditText"
        android:textColor="@color/colorWhite"
        android:drawableLeft="@drawable/ic_person_outline_white_24dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:theme="@style/AppEditText"
        android:textColor="@color/colorWhite"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"/>

    <Button
        android:id="@+id/btnForgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onForgottenPassClick"
        android:text="@string/button_forgotten"
        android:layout_gravity="end"
        style="@style/AppMainButton"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSendClick"
        android:text="@string/button_send"
        style="@style/AppButtonSend"/>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRegistrationClick"
        android:text="@string/button_reg"
        style="@style/AppMainButton"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="visible">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:visibility="gone"/>

    </LinearLayout>



</LinearLayout>